--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.+'
@@ -71,14 +70,6 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:2.3.0")
 
-    // optional - RxJava2 support for Room
-    implementation("androidx.room:room-rxjava2:2.3.0")
-
-    // optional - RxJava3 support for Room
-    implementation("androidx.room:room-rxjava3:2.3.0")
-
-    // optional - Guava support for Room, including Optional and ListenableFuture
-    implementation("androidx.room:room-guava:2.3.0")
 
     // optional - Test helpers
     testImplementation("androidx.room:room-testing:2.3.0")
@@ -87,8 +78,8 @@ dependencies {
 
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
+    implementation "androidx.core:core:1.6.0"
 
-    implementation("androidx.core:core-ktx:1.6.0")
     implementation "androidx.activity:activity-ktx:1.3.1"
 
 
@@ -99,4 +90,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     implementation "androidx.multidex:multidex:2.0.1"
+
+    implementation "io.insert-koin:koin-core:3.1.2"
+    implementation "io.insert-koin:koin-android:3.1.2"
+    implementation "io.insert-koin:koin-android-viewmodel:2.2.3"
 }
