--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -13,7 +13,7 @@ jobs:
           java-version: 1.8
 
       - name: Run Tests
-        run: chmod +x ./gradlew
+        run: ./gradlew test
 
       - name: Build Project
-        run: chmod +x ./gradlew assemble
+        run: chmod +x ./gradlew
